[package]
name = "zebra"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "A consensus-compatible Zcash node client written in Rust."

[dependencies]
app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
clap = { version = "2", features = ["yaml"] }
env_logger = "0.5"
libc = "0.2"
log = "0.4"
zebra-db = { path = "db" }
zebra-chain = { path = "chain" }
zebra-import = { path = "import" }
zebra-keys = { path = "keys" }
zebra-logs = { path = "logs" }
zebra-message = { path = "message" }
zebra-network = { path = "network" }
zebra-miner = { path = "miner" }
zebra-p2p = { path = "p2p" }
zebra-primitives = { path = "primitives" }
zebra-rpc = { path = "rpc" }
zebra-script = { path = "script" }
zebra-storage = { path = "storage" }
zebra-sync = { path = "sync" }
zebra-verification = { path = "verification" }

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = true
panic = 'abort'

[profile.test]
debug = true

[[bin]]
path = "zebra/main.rs"
name = "zebra"

[workspace]
members = [
	"bencher",
	"crypto",
	"chain",
	"db",
	"import",
	"keys",
	"logs",
	"message",
	"miner",
	"network",
	"p2p",
	"primitives",
	"rpc",
	"script",
	"serialization",
	"serialization_derive",
	"storage",
	"sync",
	"test-data",
	"verification",
]

[patch.crates-io]
heapsize = { git = "https://github.com/cheme/heapsize.git", branch = "ec-macfix" }
