[workspace]
members = [
        "zebra",
        "zebra-bencher",
        "zebra-crypto",
        "zebra-chain",
        "zebra-db",
        "zebra-import",
        "zebra-keys",
        "zebra-logs",
        "zebra-message",
        "zebra-miner",
        "zebra-network",
        "zebra-p2p",
        "zebra-primitives",
        "zebra-rpc",
        "zebra-script",
        "zebra-serialization",
        "zebra-serialization_derive",
        "zebra-storage",
        "zebra-sync",
        "zebra-test-data",
        "zebra-verification",
]

[patch.crates-io]
heapsize = { git = "https://github.com/cheme/heapsize.git", branch = "ec-macfix" }

[profile.dev]
debug = true
panic = 'abort'

[profile.release]
debug = true
panic = 'abort'

[profile.test]
debug = true