[package]
name = "zebra-bencher"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
zebra-storage = { path = "../storage" }
zebra-db = { path = "../db" }
zebra-verification = { path = "../verification" }
zebra-network = { path = "../network" }
zebra-chain = { path = "../chain", features = ["test-helpers"] }
zebra-primitives = { path = "../primitives" }
zebra-test-data = { path = "../test-data" }
time = "*"
byteorder = "1.0"

[[bin]]
path = "src/main.rs"
name = "bencher"
