[package]
name = "chain"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
rustc-hex = "2"
heapsize = "0.4"
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }

[features]
default = []
test-helpers = []
