[package]
name = "zebra-chain"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
rustc-hex = "2"
heapsize = "0.4"
zebra-crypto = { path = "../crypto" }
zebra-primitives = { path = "../primitives" }
zebra-serialization = { path = "../serialization" }
zebra-serialization_derive = { path = "../serialization_derive" }

[features]
default = []
test-helpers = []
