[package]
name = "zebra-miner"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
byteorder = "1.0"
heapsize = "0.4"
zebra-crypto = { path = "../crypto" }
zebra-chain = { path = "../chain" }
zebra-storage = { path = "../storage" }
zebra-db = { path = "../db" }
zebra-network = { path = "../network" }
zebra-primitives = { path = "../primitives" }
zebra-serialization = { path = "../serialization" }
zebra-verification = { path = "../verification" }
zebra-keys = { path = "../keys" }
zebra-script = { path = "../script" }

[dev-dependencies]
zebra-test-data = { path = "../test-data" }

[features]
test-helpers = []