[package]
name = "zebra-network"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
lazy_static = "1.3"
rustc-hex = "2"
zebra-chain = { path = "../chain" }
zebra-keys = { path = "../keys" }
zebra-primitives = { path = "../primitives" }
zebra-serialization = { path = "../serialization" }
zebra-crypto = { path = "../crypto" }
