[package]
name = "zebra-script"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
byteorder = "1.0"
log = "0.4"
zebra-crypto = { path = "../crypto" }
zebra-chain = { path = "../chain" }
zebra-keys = { path = "../keys" }
zebra-primitives = { path = "../primitives" }
zebra-serialization = { path = "../serialization" }

[dev-dependencies]
rustc-hex = "2"
serde_json = "1.0"
zebra-chain = { path = "../chain", features = ["test-helpers"] }
