[package]
name = "zebra-sync"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
parking_lot = "0.8"
log = "0.4"
time = "0.1"
futures = "0.1"
linked-hash-map = "0.5"
bit-vec = "0.4.3"
murmur3 = "0.4"
rand = "0.4"
byteorder = "1.0"

zebra-chain = { path = "../chain" }
zebra-crypto = { path = "../crypto" }
zebra-storage = { path = "../storage" }
zebra-db = { path = "../db" }
zebra-keys = { path = "../keys" }
zebra-message = { path = "../message" }
zebra-miner = { path = "../miner" }
zebra-p2p = { path = "../p2p" }
zebra-primitives = { path = "../primitives" }
zebra-script = { path = "../script" }
zebra-serialization = { path = "../serialization" }
zebra-verification = { path = "../verification" }
zebra-network = { path = "../network" }

[dev-dependencies]
zebra-test-data = { path = "../test-data" }
zebra-miner = { path = "../miner", features = ["test-helpers"] }
zebra-chain = { path = "../chain", features = ["test-helpers"] }
