[package]
name = "test-data"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
time = "0.1"

chain = { path = "../chain" }
network = { path = "../network" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
script = { path = "../script" }
