[package]
name = "zebra-verification"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
time = "0.1"
log = "0.4"
rayon = "1.0"
parking_lot = "0.8"
byteorder = "1.2"
rustc-hex = "2"
bitvec = "0.10"
bitflags = "1.0"
zebra-keys = { path = "../keys" }
zebra-primitives = { path = "../primitives" }
zebra-chain = { path = "../chain" }
zebra-serialization = { path = "../serialization" }
zebra-script = { path = "../script" }
zebra-network = { path = "../network" }
zebra-storage = { path = "../storage" }
zebra-crypto = { path = "../crypto" }

[dev-dependencies]
rand = "0.4"
assert_matches = "1.3.0"
zebra-chain = { path = "../chain", features = ["test-helpers"] }
zebra-db = { path = "../db" }
zebra-test-data = { path = "../test-data" }
