[package]
name = "zebra-crypto"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
bellman = "0.1"
blake2-rfc = { git = "https://github.com/gtank/blake2-rfc.git", rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9" }
blake2b_simd = { git = "https://github.com/oconnor663/blake2b_simd.git" }
bn = { git = "https://github.com/paritytech/bn" }
ed25519-dalek = "1.0.0-pre.1"
lazy_static = "1.3.0"
pairing = "0.14.2"
rust-crypto = { git = "https://github.com/nikvolf/rust-crypto", branch = "no-pad" }
rustc-hex = "2"
sapling-crypto = { git = "https://github.com/zcash-hackworks/sapling-crypto.git", rev = "21084bde2019c04bd34208e63c3560fe2c02fb0e" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
siphasher = "0.3.0"
zebra-primitives = { path = "../primitives" }
