[package]
name = "zebra-import"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
tracing = "0.1"
zebra-primitives = { path = "../zebra-primitives" }
zebra-chain = { path = "../zebra-chain" }
zebra-serialization = { path = "../zebra-serialization" }
