[package]
name = "zebra-keys"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
rand = "0.6"
rustc-hex = "2"
lazy_static = "1.3"
base58 = "0.1"
eth-secp256k1 = "0.5.7"
zebra-crypto = { path = "../zebra-crypto" }
zebra-primitives = { path = "../zebra-primitives" }
