[package]
name = "zebra-message"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
byteorder = "1.0"

zebra-crypto = { path = "../crypto" }
zebra-chain = { path = "../chain" }
zebra-primitives = { path = "../primitives" }
zebra-serialization = { path = "../serialization" }
zebra-serialization_derive = { path = "../serialization_derive" }
zebra-network = { path = "../network" }
