[package]
name = "zebra-network"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
lazy_static = "1.3"
rustc-hex = "2"
zebra-chain = { path = "../zebra-chain" }
zebra-keys = { path = "../zebra-keys" }
zebra-primitives = { path = "../zebra-primitives" }
zebra-serialization = { path = "../zebra-serialization" }
zebra-crypto = { path = "../zebra-crypto" }
