[package]
name = "zebra-p2p"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
tokio-core = "0.1.6"
tokio-io = "0.1.12"
parking_lot = "0.8"
futures = "0.1"
futures-cpupool = "0.1"
time = "0.1"
rand = "0.4"
log = "0.4"
abstract-ns = "0.3"
ns-dns-tokio = "0.3"
csv = "1"

zebra-primitives = { path = "../primitives" }
zebra-crypto = { path = "../crypto" }
zebra-message = { path = "../message" }
zebra-serialization = { path = "../serialization" }
zebra-network = { path = "../network" }
