[package]
name = "zebra-rpc"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[lib]

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "2"
time = "0.1"
tokio-core = "0.1.1"
jsonrpc-core = "10.0"
jsonrpc-derive = "10.0"
jsonrpc-pubsub = "10.0"
jsonrpc-http-server = "10.0"

zebra-sync = { path = "../sync" }
zebra-serialization = { path = "../serialization" }
zebra-chain = { path = "../chain" }
zebra-primitives = { path = "../primitives" }
zebra-p2p = { path = "../p2p" }
zebra-network = { path = "../network" }
zebra-storage = { path = "../storage" }
zebra-db = { path = "../db" }
zebra-miner = { path = "../miner" }
zebra-verification = { path = "../verification" }
zebra-script = { path = "../script" }
zebra-keys = { path = "../keys" }

[dev-dependencies]
zebra-test-data = { path = "../test-data" }
