[package]
name = "zebra-rpc"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[lib]

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "2"
time = "0.1"
tokio-core = "0.1.1"
jsonrpc-core = "10.0"
jsonrpc-derive = "10.0"
jsonrpc-pubsub = "12.1"
jsonrpc-http-server = "13.1"

zebra-sync = { path = "../zebra-sync" }
zebra-serialization = { path = "../zebra-serialization" }
zebra-chain = { path = "../zebra-chain" }
zebra-primitives = { path = "../zebra-primitives" }
zebra-p2p = { path = "../zebra-p2p" }
zebra-network = { path = "../zebra-network" }
zebra-storage = { path = "../zebra-storage" }
zebra-db = { path = "../zebra-db" }
zebra-miner = { path = "../zebra-miner" }
zebra-verification = { path = "../zebra-verification" }
zebra-script = { path = "../zebra-script" }
zebra-keys = { path = "../zebra-keys" }

[dev-dependencies]
zebra-test-data = { path = "../zebra-test-data" }
