[package]
name = "zebra-serialization_derive"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[lib]
name = "zebra_serialization_derive"
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[dev-dependencies]
zebra-serialization = { path = "../zebra-serialization" }
