[package]
name = "zebra-storage"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
elastic-array = "0.10"
parking_lot = "0.8"
bit-vec = "0.6"
lru-cache = "0.1"
display_derive = "0.0.0"
lazy_static = "*"
zebra-primitives = { path = "../zebra-primitives" }
zebra-serialization = { path = "../zebra-serialization" }
zebra-chain = { path = "../zebra-chain" }
zebra-crypto = { path = "../zebra-crypto" }
zebra-network = { path = "../zebra-network" }
