[package]
name = "zebra-test-data"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]

[dependencies]
time = "0.1"

zebra-chain = { path = "../chain" }
zebra-network = { path = "../network" }
zebra-primitives = { path = "../primitives" }
zebra-serialization = { path = "../serialization" }
zebra-script = { path = "../script" }
